fixed VERY annoying textarea overflow issue with flex:1

--- a/cellar/static/cellar/resets.css
+++ b/cellar/static/cellar/resets.css
@@ -52,6 +52,14 @@ picture {
   display: block; /* helps with spacing */
 }
 
+textarea {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
 /* make form elements easier to work with */
 input,
 button,
@@ -65,6 +73,11 @@ select {
 
 ul li {
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 /* remove animations for ppl who turn them off */
